@@ -445,4 +445,5 @@ Revision	Log Message
 438		Aristocracy/Plutocracy slider
 439
 440		Innovative/Narrowminded slider
-441		Serfdom/Freesubject slider
+441		Serfdom/Freesubjects slider
+442		Mercantilism/Freetrade slider
